--- a/app/views/account.html
+++ b/app/views/account.html
@@ -81,6 +81,8 @@
           <dt>Transaction details:</dt>
           <dd class="txlist-hash">
             <a target="_blank" href="https://blockchain.info/tx/{{tx.hash}}">Blockchain</a>
+            <a target="_blank" href="http://live.insight.is/tx/{{tx.hash}}">insight</a>
+            <a target="_blank" href="https://blockr.io/tx/info/{{tx.hash}}">blockr</a>
           </dd>
         </dl>
       </td>
