Controllers split, switch to angular-ui-bootstrap
- remove support for IE<9
- split fat controllers into smaller ones
- reorganize views into directories
- move modal creation from trezorService to controllers, events flow through
  angular scopes
- improve recovery process
- improve output confirmation

--- a/app/views/account/nav.html
+++ b/app/views/account/nav.html
@@ -1,5 +1,5 @@
-<ul class="nav nav-tabs nav-sendrecv"
-    ng-controller="NavCtrl">
+<ul ng-controller="NavCtrl"
+    class="nav nav-tabs nav-sendrecv">
   <li ng-class="{ active: isActive('/device/{{device.id}}/account/{{account.id}}$') }">
     <a class="btn" href="#/device/{{device.id}}/account/{{account.id}}">
       <span class="glyphicon glyphicon-transfer"></span> Transactions
