--- a/app/views/device/index.setup.html
+++ b/app/views/device/index.setup.html
@@ -1,4 +1,5 @@
-<form>
+<form ng-controller="DeviceSetupCtrl">
+
   <h3>Welcome to TREZOR Setup!</h3>
   <p class="lead">
     Please take your time to read all instructions. The setup might
@@ -99,4 +100,5 @@
     <button class="btn btn-lg btn-success"
             ng-click="setup(device, settings)">Continue</button>
   </div>
+
 </form>
