--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,10 @@
-<div ng-if="!devices.length" class="alert alert-info">
-	<h4>Get started</h4>
-	<p>Connect your TREZOR device to the computer.</p>
-        <p class='need-help'><!-- #TODO --></p>
+<div ng-controller="MainCtrl">
+
+  <div class="alert alert-info"
+       ng-if="!devices.length">
+    <h4>Get started</h4>
+    <p>Connect your TREZOR device to the computer.</p>
+    <p class="need-help"><!-- #TODO --></p>
+  </div>
+
 </div>
