--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -97,6 +97,11 @@ a .icon-loading,
   color: #999;
 }
 
+.form-inline .help-block {
+  display: inline-block;
+  margin-left: 20px;
+}
+
 .lead {
   font-size: 16px;
 }
@@ -130,25 +135,6 @@ a .icon-loading,
   opacity: 0;
 }
 
-/*.txlist-detail,
-.txlist-detail * {
-  -webkit-transition: all ease-in-out 0.1s;
-  -moz-transition: all ease-in-out 0.1s;
-  transition: all ease-in-out 0.1s;
-  overflow: hidden;
-}
-.txlist-detail.ng-hide-add,
-.txlist-detail.ng-hide-remove {
-  display: table-row !important;
-}
-.txlist-detail.ng-hide,
-.txlist-detail.ng-hide * {
-  opacity: 0 !important;
-  line-height: 0 !important;
-  padding-top: 0 !important;
-  padding-bottom: 0 !important;
-}*/
-
 /* Line divider component */
 
 .line-divider {
@@ -169,6 +155,18 @@ a .icon-loading,
 
 .slider-horizontal {
   width: 100% !important;
+}
+
+/* Device screen component */
+
+.samp-screen {
+  display: block;
+  padding: 9.5px;
+  margin: 10px 0 0;
+  font-size: 13px;
+  line-height: 1.42857143;
+  background: #333333;
+  color: #ffffff;
 }
 
 /* Layout, header, footer */
