--- a/app/views/device/load.html
+++ b/app/views/device/load.html
@@ -1,27 +1,31 @@
-<ol class="breadcrumb">
-  <li><a ng-href="#/device/{{device.id}}">{{device.label()}}</a></li>
-  <li class="active">Load device</li>
+<div ng-controller="DeviceCtrl">
 
-  <li class="pull-right">
-    <a href="" class="text-muted"
-       title="Forget this device"
-       ng-click="forgetDevice()"
-      ><span class="glyphicon glyphicon-log-out"></span> Forget device</a>
-  </li>
-</ol>
+  <ol class="breadcrumb">
+    <li><a ng-href="#/device/{{device.id}}">{{device.label()}}</a></li>
+    <li class="active">Load device</li>
+    <li class="pull-right">
+      <a href=""
+         class="text-muted"
+         title="Forget this device"
+         ng-click="forgetDevice()"
+        ><span class="glyphicon glyphicon-log-out"></span> Forget device</a>
+    </li>
+  </ol>
+  <div ng-if="!device.isConnected()" class="alert alert-warning">
+    <strong>Please connect your device</strong> to access this section.
+  </div>
 
-<div ng-if="!device.isConnected()" class="alert alert-warning">
-  <strong>Please connect your device</strong> to access this section.
-</div>
+  <div ng-controller="DeviceLoadCtrl"
+       class="row">
 
-<div class="row">
-  <fieldset ng-disabled="!device.isConnected()">
+    <fieldset ng-disabled="!device.isConnected()">
       <form name="form" class="devload col-md-6">
 
         <div class="alert alert-warning">
-        <p>This is an advanced interface intended for developer use only!</p>
-        <p>If you are a common user and want to setup or recover your TREZOR device, please continue <a href="#/device/{{device.id}}/setup">here</a>.</p>
-        <p>Never use this process unless you really know what you are doing!</p>
+          <p>This is an advanced interface intended for developer use only!</p>
+          <p>If you are a common user and want to setup or recover your TREZOR device,
+            please continue <a href="#/device/{{device.id}}/setup">here</a>.</p>
+          <p>Never use this process unless you really know what you are doing!</p>
         </div>
 
         <div class="form-group">
@@ -53,11 +57,14 @@
         <div class="form-group">
           <button class="btn btn-primary"
                   ng-disabled="!form.$valid"
-                  ng-click="load(device, settings)">Continue</button>
+                  ng-click="loadDevice()">Continue</button>
           <a href="#/device/{{device.id}}"
              class="btn btn-link">Cancel</a>
         </div>
 
       </form>
-  </fieldset>
+    </fieldset>
+
+  </div>
+
 </div>
