show Account public keys in device info page

--- a/app/views/device/index.info.html
+++ b/app/views/device/index.info.html
@@ -46,3 +46,12 @@
 <a class="btn btn-danger"
    ng-href="#/device/{{device.id}}/wipe"
   ><span class="glyphicon glyphicon-trash"></span> Wipe device</a>
+
+<hr>
+
+<h5>Account public keys:</h5>
+<ul class="nav nav-devices-accounts">
+  <li ng-repeat="account in device.accounts" class="text-muted">
+    <small>{{account.publicKey()}}</small>
+  </li>
+</ul>
