Fix missing rename

--- a/app/views/device/index.setup.html
+++ b/app/views/device/index.setup.html
@@ -98,7 +98,7 @@
 
   <div class="form-group text-center">
     <button class="btn btn-lg btn-success"
-            ng-click="setup(device, settings)">Continue</button>
+            ng-click="setupDevice()">Continue</button>
   </div>
 
 </form>
