Hide acc keys behind a button, improve style

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -93,6 +93,10 @@ a .icon-loading,
   text-transform: capitalize;
 }
 
+.text-break {
+  word-break: break-all;
+}
+
 .help-block {
   color: #999;
 }
