xprv -> xpub in import dialog

--- a/app/views/import.html
+++ b/app/views/import.html
@@ -29,7 +29,7 @@
 
         <div class="form-group">
           <label for="payload" class="control-label">
-            Account XPRVs
+            Account XPUBs
             <small>(1 per row)</small>
           </label>
           <textarea name="payload" id="payload" class="form-control"
