Add debug functionality

--- a/app/views/account/index.html
+++ b/app/views/account/index.html
@@ -85,6 +85,10 @@
                 <a target="_blank" href="https://blockr.io/tx/info/{{tx.hash}}">blockr</a>
               </dd>
             </dl>
+
+            <debug>
+              <pre>{{tx | json}}</pre>
+            </debug>
           </td>
         </tr>
       </tbody>
