Add tooltips to the send screen

--- a/app/views/account/nav.html
+++ b/app/views/account/nav.html
@@ -10,9 +10,12 @@
       <span class="glyphicon glyphicon-circle-arrow-right"></span> Receive
     </a>
   </li>
-  <li ng-class="{ active: isActive('/device/{{device.id}}/account/{{account.id}}/send$') }">
+  <li ng-class="{ active: isActive('/device/{{device.id}}/account/{{account.id}}/send$') }"
+      tooltip="Please connect your device to send coins."
+      tooltip-trigger="{{ device.isConnected() ? 'manual' : 'mouseenter'}}"
+      tooltip-placement="bottom">
     <a class="btn" href="#/device/{{device.id}}/account/{{account.id}}/send"
-       ng-disabled="account.isEmpty() || !device.isConnected()">
+       ng-disabled="!device.isConnected()">
       <span class="glyphicon glyphicon-circle-arrow-left"></span> Send
     </a>
   </li>
