Output -> recipient in UI

--- a/app/views/account/send.html
+++ b/app/views/account/send.html
@@ -72,7 +72,7 @@
                           ng-show="tx.values.outputs.length > 1">
                     <span class="text-muted">
                       <span class="glyphicon glyphicon-minus"
-                            tooltip="Remove output"></span>
+                            tooltip="Remove recipient"></span>
                     </span>
                   </button>
                 </p>
@@ -96,7 +96,7 @@
                       ng-click="addOutput()">
                 <span class="text-muted">
                   <span class="glyphicon glyphicon-plus"
-                        tooltip="Add output"></span>
+                        tooltip="Add recipient"></span>
                 </span>
               </button>
             </div>
