--- a/app/views/modal/button.html
+++ b/app/views/modal/button.html
@@ -23,6 +23,23 @@
     </div>
   </div>
 
+  <div ng-switch-when="ButtonRequest_SignTx"
+       class="alert alert-block alert-info">
+    <h4>Please confirm the transaction on your device.</h4>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <samp class="samp-screen"
+              ng-if="tx">
+          Really send<br>
+          {{ tx.outputSum | amount }} {{ account.coin.coin_shortcut }}<br>
+          from your wallet?<br>
+          Fee will be<br>
+          {{ tx.fee | amount }} {{ account.coin.coin_shortcut }}
+        </samp>
+      </div>
+    </div>
+  </div>
+
   <div ng-switch-when="ButtonRequest_ConfirmWord"
        class="alert alert-block alert-info">
     <h4>Please write down the recovery seed from your device.</h4>
