--- a/app/views/device/index.setup.html
+++ b/app/views/device/index.setup.html
@@ -2,8 +2,8 @@
 
   <h3>Welcome to TREZOR Setup!</h3>
   <p class="lead">
-    Please take your time to read all instructions. The setup might
-    take up to a few minutes. When done, you can start using TREZOR.
+    Please take your time to read all of the instructions. Setting up your TREZOR
+    will take only a few minutes. When you're done, you can start using your TREZOR.
   </p>
 
   <div class="form-group">
@@ -12,8 +12,8 @@
            placeholder="My TREZOR"
            ng-model="settings.label">
     <p class="help-block">
-      This label will be shown on the display.
-      Useful if you have more devices.
+      This label will be shown on the display when you plug your TREZOR in.
+      This is useful if you have more than one device.
     </p>
   </div>
 
@@ -34,8 +34,9 @@
       <hr>
       <h4>Recovery seed length</h4>
       <p>
-        Recovery seed is a sequence of words. It will help you recovering your wallet
-        (balance and transaction history), even into another device.
+        Your recovery seed is a sequence of words. It will help you recover your wallet
+        (your bitcoins and transaction history), into another device should your TREZOR
+        be lost or destoyed.
       </p>
       <input type="text" name="strength" id="strength"
              class="form-control"
@@ -57,18 +58,18 @@
           24 words <span class="devsetup-strength-label">Paranoid</span>
         </p>
       </div>
-      <p class="help-block">We believe 12 words are safe enough but you have the option to choose 18 or 24
+      <p class="help-block">We believe 12 words are safe enough but you have the option to use 18 or 24
       for more security. Just keep in mind that the recovery
-      process using longer seed takes slightly more time.</p>
+      process using a longer seed takes slightly more time.</p>
     </div>
 
     <hr>
     <h4>PIN protection</h4>
     <p>
-      Using PIN protection is highly recommended. PIN prevents unauthorized persons from stealing
-      your bitcoins even when they get physical access to your device.
+      Using PIN protection is highly recommended. The PIN prevents unauthorized persons from stealing
+      your bitcoins if they ever get physical access to your device.
     </p>
-    <p>PIN can be set or changed later as well. Careful, PIN does not protect your Recovery seed.</p>
+    <p>You can reset or change your PIN at any time after the setup is complete. Be careful with your recovery card.  If anyone finds out your recovery seed they can steal your bitcoins even without your pin.</p>
     <div class="checkbox">
       <label>
         <input type="checkbox" name="pin-protection"
@@ -79,17 +80,17 @@
     <hr>
     <h4>Additional passphrase encryption</h4>
     <p>
-      Encryption passphrase is additional level of security. You'll be asked for your passhrase every time
-      you want to access your wallet. Careful, if you forget the passphrase,
-      nothing will help you to get access to your wallet. Not even the Recovery seed.
-      Also note that passphrase is case-sensitive.
+      Using an encryption passphrase adds an additional level of security. You'll be asked for your passhrase every time
+      you want to access your wallet. Be careful though, if you forget the passphrase
+      there will be no way to recover your bitcoins. Not even the Recovery seed.
+      Also note that TREZOR passphrases are case-sensitive.
       <span class="text-danger">For experts only!</span>
     </p>
     <div class="checkbox">
       <label>
         <input type="checkbox" name="passphrase-protection"
                ng-model="settings.passphrase_protection">
-        I take the responsibility and want to enable passphrase encryption
+        I take responsibility and want to enable passphrase encryption
       </label>
     </div>
     <hr>
