--- a/app/views/device/index.setup.html
+++ b/app/views/device/index.setup.html
@@ -69,7 +69,9 @@
       Using PIN protection is highly recommended. The PIN prevents unauthorized persons from stealing
       your bitcoins if they ever get physical access to your device.
     </p>
-    <p>You can reset or change your PIN at any time after the setup is complete. Be careful with your recovery card.  If anyone finds out your recovery seed they can steal your bitcoins even without your pin.</p>
+    <p>You can reset or change your PIN at any time after the setup is complete.
+    Be careful with your recovery card.
+    If anyone finds out your recovery seed they can steal your bitcoins even without your PIN.</p>
     <div class="checkbox">
       <label>
         <input type="checkbox" name="pin-protection"
