advanced features -> advanced settings

--- a/app/views/device/index.setup.html
+++ b/app/views/device/index.setup.html
@@ -23,7 +23,7 @@
     <div class="line-divider-content text-center">
       <button class="btn btn-xs btn-default"
               ng-click="advanced = !advanced">
-        Advanced features
+        Advanced settings
         <span class="caret"></span>
       </button>
     </div>
