Add debugging logs to tx construction

--- a/app/views/account/send.html
+++ b/app/views/account/send.html
@@ -125,6 +125,10 @@
           </div>
 
         </form>
+
+        <debug>
+          <pre>{{ tx | json }}</pre>
+        </debug>
       </fieldset>
 
       <!-- QR scan  -->
